[package]
name = "actor-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.0.1"
env_logger = "0.9.0"
futures = "0.3.21"
json = "0.12.4"
log = "0.4.14"
serde = {version="1.0.136", features = ["derive"]}
serde_json = "1.0.79"
