[package]
name = "actor-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.0.1"
cargo = "0.60.0"
env_logger = "0.9.0"
futures = "0.3.21"
json = "0.12.4"
log = "0.4.14"
proc-macro2 = "1.0.36"
quote = "1.0.15"
reqwest = {version="0.11.9", features=["json"]}
serde = {version="1.0.136", features = ["derive"]}
serde_json = "1.0.79"
syn = { version = "1.0.86", features = ["full", "parsing", "extra-traits", "visit", "fold"] }
tempdir = "0.3.7"

[[bin]]
name = "actor-server"
path = "src/server.rs"
test = false

[[bin]]
name = "actor-worker"
path = "src/worker.rs"
test = false
