[package]
name = "actor-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.0.1"
anyhow = "1.0.56"
bytes = "1.1.0"
cargo = "0.60.0"
env_logger = "0.9.0"
futures = "0.3.21"
json = "0.12.4"
log = "0.4.14"
proc-macro2 = "1.0.36"
prost = "0.9.0"
quote = "1.0.15"
reqwest = {version="0.11.9", features=["json"]}
serde = {version="1.0.136", features = ["derive"]}
serde_json = "1.0.79"
syn = { version = "1.0.86", features = ["full", "parsing", "extra-traits", "visit", "fold"] }
tempdir = "0.3.7"
thiserror = "1.0.30"
tokio = {version="1.17.0", features=["process","macros", "rt-multi-thread", "fs"]}
tokio-stream = "0.1.8"
tokio-util = {version="0.7.0", features=["io"]}
tonic = "0.6.2"

[build-dependencies]
tonic-build = "0.6.2"

[[bin]]
name = "actor-server"
path = "src/server.rs"
test = false

[[bin]]
name = "actor-worker"
path = "src/worker.rs"
test = false
